--- a/index.html
+++ b/index.html
@@ -2,99 +2,22 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<title>D3: Setting path fills dynamically to generate a choropleth</title>
+		<title>OpenElections: Certified election results. For everyone.</title>
     <script src="http://d3js.org/d3.v3.min.js"></script>
-		<style type="text/css">
-			/* No style rules here yet */		
-		</style>
+    <link href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
+    <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="css/style.css"/>
 	</head>
 	<body>
+  <div class="container">
+  <div class="row clearfix">
+    <h1>OpenElections</h1>
+    <h3>Certified election results. For everyone.</h3>
+  </div>
+  <div class="row clearfix">
   <div id="map"></div>
-		<script type="text/javascript">
-
-			//Width and height
-			var w = 600;
-			var h = 360;
-
-			//Define map projection
-
-      var geo;
-      var stateStatuses = {};
-
-      var projection = d3.geo.albersUsa()
-								   .translate([w/2, h/2])
-								   .scale([600]);
-
-			//Define path generator
-			var path = d3.geo.path()
-							 .projection(projection);
-							 
-			//Define quantize scale to sort data values into buckets of color
-			var color = d3.scale.ordinal()
-								.range(["rgb(237,248,233)","rgb(116,196,118)","rgb(0,109,44)"])
-								//Colors taken from colorbrewer.js, included in the D3 download
-                //Set input domain for color scale
-                .domain(["Not Started","Partial", "Up-to-date"]);
-
-
-      //Create SVG element
-      var mapdiv = d3.select("#map")
-
-      var svg = mapdiv.append("svg")
-						.attr("width", w)
-						.attr("height", h);
-
-      var infoBox = mapdiv.append('div')
-
-			//Load in agriculture data
-//			d3.csv("openelection_volunteers.csv", processCSV)
-
-      d3.json("js/sample_metadata_status.json", processJSON);
-
-
-      function processJSON(data) {
-        data.objects.forEach(function(row) {
-          stateStatuses[row.state] = row
-        })
-        loadGeo()
-      }
-
-      function loadGeo() {
-				//Load in GeoJSON data
-				d3.json("js/us-states.json", function(json) {
-
-          json.features.forEach(function(feature) {
-//            console.log(feature)
-            if (stateStatuses[feature.properties.name]) {
-              feature.properties = stateStatuses[feature.properties.name]
-            } else {
-              console.log("No match", feature.properties.name)
-            }
-          })
-
-          geo = json;
-          render()
-        })
-      }
-
-      function render() {
-        //Bind data and create one path per GeoJSON feature
-        svg.selectAll("path")
-           .data(geo.features)
-           .enter()
-           .append("path")
-           .attr("d", path)
-           .style("fill", function(d) {
-              var value = d.properties.status;
-              return value ? color(value) : '#ccc'
-           })
-            .on('mouseover', function(d) {
-              var dd = d.properties
-              infoBox.html('<strong>' + dd.state + '</strong><br> Metadata Status: ' + dd.status + '<br> Lead Volunteer(s): ' +  dd.volunteers)
-            })
-
-			};
-			
-		</script>
+  </div>
+  </div>
 	</body>
+  <script src="js/render-map.js"></script>
 </html>
