--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<title>OpenElections: Certified election results. For everyone.</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>OpenElections: Certified election results. For everyone.</title>
     <script src="http://d3js.org/d3.v3.min.js"></script>
     <link href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
@@ -11,13 +12,15 @@
 	<body>
   <div class="container">
   <div class="row clearfix">
-    <h1>OpenElections</h1>
-    <h3>Certified election results. For everyone.</h3>
+    <h1>OpenElections<br>    <small>Certified election results. For everyone.</small>
+    </h1>
   </div>
-  <div class="row clearfix">
+  <div id="main" class="row clearfix col-md-8 column">
   <div id="map"></div>
   </div>
-  </div>
+    <div id="sidebar" class="row clearfix col-md-4 column">
+
+    </div>
 	</body>
   <script src="js/render-map.js"></script>
 </html>
