clean up divs and rows

--- a/index.html
+++ b/index.html
@@ -11,16 +11,17 @@
 	</head>
 	<body>
   <div class="container">
-  <div class="row clearfix">
-    <h1>OpenElections<br>    <small>Certified election results. For everyone.</small>
-    </h1>
-  </div>
-  <div id="main" class="row clearfix col-md-8 column">
-  <div id="map"></div>
-  </div>
-    <div id="sidebar" class="row clearfix col-md-4 column">
-
+    <div class="row">
+      <h1>OpenElections<br>    <small>Certified election results. For everyone.</small>
+      </h1>
     </div>
+    <div class="row">
+      <div id="main" class="col-md-8">
+        <div id="map"></div>
+      </div>
+      <div id="sidebar" class="col-md-4"></div>
+    </div>
+  </div>
 	</body>
   <script src="js/render-map.js"></script>
 </html>
