Parameterize the map rendering process
Create an ``openelex`` namespace and expose a function
``openelex.renderMap()`` that kicks off the map rendering process.

This better encapsulates some of the initialization code and allows
for specifying parameters when invoking the map rendering. This
lets us specify things like the container element or the status
data file.

This also adds lodash as a dependency.  Right now it's loaded from
a CDN, like other external libraries.  I added a recipe to the
README that provides a good way to develop and test the page
locally while still using the protocol-independent CDN URLs.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>OpenElections: Certified election results. For everyone.</title>
-    <script src="http://d3js.org/d3.v3.min.js"></script>
+    <script src="//d3js.org/d3.v3.min.js"></script>
     <link href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="css/style.css"/>
@@ -22,6 +22,10 @@
       <div id="sidebar" class="col-md-4"></div>
     </div>
   </div>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/2.4.1/lodash.min.js"></script>
   <script src="js/render-map.js"></script>
+  <script>
+  openelex.renderMap();
+  </script>
   </body>
 </html>
