Wire up real status data.
Wire up the map to a real status data JSON file.

Use lodash templates to generate the HTML shown in the sidebar.

--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
   <script src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/2.4.1/lodash.min.js"></script>
   <script src="js/render-map.js"></script>
   <script>
-  openelex.renderMap();
+  openelex.renderMap({
+    statusJSON: 'data/state_status-20140310.json'
+  });
   </script>
   </body>
 </html>
