Separate layouts with and without sidebar

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
-layout: default
+layout: sidebar 
 footer_scripts:
     - //d3js.org/d3.v3.min.js
     - //cdnjs.cloudflare.com/ajax/libs/lodash.js/2.4.1/lodash.min.js
