Increase space between Core Team bios

--- a/people.html
+++ b/people.html
@@ -6,7 +6,7 @@ layout: default
 <h2 id="core-team">Core Team</h2>
 
 {% for person in site.data.team %}
-<div class="person">
+<div class="person core-team">
   {% if person.image %}
   <img src="img/people/{{ person.image }}" class="headshot">
   {% endif %}
