--- a/index.html
+++ b/index.html
@@ -4,14 +4,19 @@ footer_scripts:
     - //d3js.org/d3.v3.min.js
     - //cdnjs.cloudflare.com/ajax/libs/lodash.js/2.4.1/lodash.min.js
 footer_script_include: index_footer_scripts.html
+sidebar_include: index_sidebar.html 
 ---
 <h2>Status of data collection</h2>
 
-<!-- 
-TODO:
+<dl id="legend">
+    <dt class="not-started"></dt>
+    <dd>Not started</dd>
+    <dt class="partial"></dt>
+    <dd>In progress</dt>
+    <dt class="up-to-date"></dt>
+    <dd>Up-to-date</dd>
+</dl>
 
-* Shade map with button colors rather than shades of green
-* 
--->
-<div id="map">
-</div>
+<div id="map"></div>
+
+
