Spacing and alignment tweaks
I made the following visual tweaks based on feedback from
@SaraSchnadt:

* Make navbar thinner.
* Left justify navbar links.
* Right justify navbar icons.
* Left justify text in main column.
* Right justify text in sidebar.
* Vertically align default instruction text with main heading.
* Make blue color in map match logo (#258bd1)
* Increase logo font size to 40px and scale checkmark glyph
  relatively.

I made these structural changes to support the above changes:

* Make the main column 9 grid columns wide and the sidebar 3
  grid columns wide instead of (8/4).  The right aligned text
  looked weird with 4 columns of space.
* Use d3's ``selection.classed()`` instead of ``selection.attr()``
  to set sidebar classes.

I made the following additional changes that I encountered as I
looked at the code:

* Add page title to ``<title>``.

--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 ---
+title: Home
 layout: sidebar 
 footer_scripts:
     - //d3js.org/d3.v3.min.js
     - //cdnjs.cloudflare.com/ajax/libs/lodash.js/2.4.1/lodash.min.js
 footer_script_include: index_footer_scripts.html
 sidebar_include: index_sidebar.html 
+body_class: map
+hide_default_heading: true 
 ---
 <h2>Status of data collection</h2>
 
