Toggle map between metadata and results
Add control to switch between results and metadata map types.

Add dispatcher to send/receive signals for when the map type changes.

Refine the css classes so each state's classes can be set once and
the map container's class only needs to be changed in order to
change the shading.

Toggle sidebar content when switching between map types.

Addresses https://github.com/openelections/core/issues/157

--- a/index.html
+++ b/index.html
@@ -11,13 +11,22 @@ hide_default_heading: true
 ---
 <h2>Status of data collection</h2>
 
-<dl id="legend">
+<dl id="legend-metadata" class="legend">
     <dt class="not-started"></dt>
     <dd>Not started</dd>
     <dt class="partial"></dt>
     <dd>In progress</dt>
     <dt class="up-to-date"></dt>
     <dd>Up-to-date</dd>
+</dl>
+
+<dl id="legend-results" class="legend">
+    <dt class="not-started"></dt>
+    <dd>Not started</dd>
+    <dt class="raw"></dt>
+    <dd>Raw</dt>
+    <dt class="clean"></dt>
+    <dd>Clean</dd>
 </dl>
 
 <div id="map"></div>
