Add metadata to sidebar of results page
Refactor sidebar rendering into a separate view to be able to
reuse code.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@ layout: sidebar
 footer_scripts:
     - //d3js.org/d3.v3.min.js
     - //cdnjs.cloudflare.com/ajax/libs/lodash.js/2.4.1/lodash.min.js
+    - //cdnjs.cloudflare.com/ajax/libs/backbone.js/1.1.2/backbone-min.js
 footer_script_include: index_footer_scripts.html
 sidebar_include: index_sidebar.html 
 body_class: map
@@ -30,5 +31,3 @@ hide_default_heading: true
 </dl>
 
 <div id="map"></div>
-
-
