--- a/results.html
+++ b/results.html
@@ -2,9 +2,13 @@
 title: Results 
 layout: sidebar 
 permalink: /results/
+stylesheets:
+    - /css/jquery-ui.min.css
+    - /css/jquery-ui.structure.css
 footer_scripts:
     - //cdnjs.cloudflare.com/ajax/libs/lodash.js/2.4.1/lodash.min.js
     - //cdnjs.cloudflare.com/ajax/libs/backbone.js/1.1.2/backbone-min.js
+    - /js/jquery-ui.min.js
 footer_script_include: results_footer_scripts.html
 ---
 <div id="results-container"></div>
