Refine download page
Adjust microcopy to match spec.

Add heading for table that reflects office and date range filters.

Add legend for date range filter bar color.

Make bar color reflect the legend.

Addresses https://github.com/openelections/core/issues/168

--- a/results.html
+++ b/results.html
@@ -10,5 +10,21 @@ footer_scripts:
     - //cdnjs.cloudflare.com/ajax/libs/backbone.js/1.1.2/backbone-min.js
     - /js/jquery-ui.min.js
 footer_script_include: results_footer_scripts.html
+hide_default_heading: true 
 ---
+<h2>Download Detailed Data</h2>
+
+<dl id="legend-race-type" class="legend">
+    <dt class="primary"></dt>
+    <dd>Primary</dd>
+    <dt class="special primary"></dt>
+    <dd>Special Primary</dt>
+    <dt class="general"></dt>
+    <dd>General</dd>
+    <dt class="special general"></dt>
+    <dd>Special General</dd>
+    <dt class="runoff"></dt>
+    <dd>Run-off</dd>
+</dl>
+
 <div id="results-container"></div>
