Add greyed-out icon if results are planned but not baked
Refactor rendering of ResultsTableView to use separate methods
for rendering the year headings, election rows and download
widgets.  This should make future changes to the view much
easier and faster.

Addresses
https://github.com/openelections/openelections.github.io/issues/25

--- a/js/tests/SpecRunner.html
+++ b/js/tests/SpecRunner.html
@@ -19,6 +19,7 @@
 
   <!-- include spec files here... -->
   <script src="spec/results.js"></script>
+  <script src="spec/results_views.js"></script>
 
 </head>
 
