Refine results vizualization
* Add utility method of Result model to return normalized election
  type to match the types used in the vizualization
* Add method to Results collection return an array of the counts of
  elections of each type
* Create reusable d3 drawing function for viz and wrap it in a view.
* Add separate stylesheet for viz.
* Use d3 for the visualization slider control. The jQuery UI slider widget,
  which uses percent widths to calculate the snap positions of the handle,
  didn't easily line up with the bars or year ticks in the d3-based
  visualization. Use a solution based on the d3 brush control
  (http://bl.ocks.org/mbostock/6232620 is a good reference implementation)
  instead.
* Move legend to right-hand-side of visualization instead of the top.

Addresses https://github.com/openelections/openelections.github.io/issues/23

--- a/results.html
+++ b/results.html
@@ -5,23 +5,10 @@ permalink: /results/
 footer_scripts:
     - //cdnjs.cloudflare.com/ajax/libs/lodash.js/2.4.1/lodash.min.js
     - //cdnjs.cloudflare.com/ajax/libs/backbone.js/1.1.2/backbone-min.js
-    - /js/jquery-ui.min.js
+    - //cdnjs.cloudflare.com/ajax/libs/d3/3.4.11/d3.min.js
 footer_script_include: results_footer_scripts.html
 hide_default_heading: true 
 ---
 <h2>Download Detailed Data</h2>
-
-<dl id="legend-race-type" class="legend">
-    <dt class="primary"></dt>
-    <dd>Primary</dd>
-    <dt class="special primary"></dt>
-    <dd>Special Primary</dt>
-    <dt class="general"></dt>
-    <dd>General</dd>
-    <dt class="special general"></dt>
-    <dd>Special General</dd>
-    <dt class="runoff"></dt>
-    <dd>Run-off</dd>
-</dl>
 
 <div id="results-container"></div>
