Add microcopy for metadata status popups
Addresses https://github.com/openelections/openelections.github.io/issues/20

--- a/index.html
+++ b/index.html
@@ -13,28 +13,32 @@ metadata_statuses:
     -
         class: "not-started"
         title: "Not started"
-        description: ""
+        description: "This state has not yet been assigned to a volunteer for metadata work, or work has not begun."
     -
         class: "partial"
         title: "In progress"
-        description: ""
+        description: "Volunteer has been assigned to this state, data source investigation and metadata entry are underway."
     -
         class: "up-to-date"
         title: "Up-to-date"
-        description: ""
+        description: "All metadata has been entered for races from 2000-2013 for this state."
 results_statuses:
     -
         class: "not-started"
         title: "Not started"
-        description: ""
+        description: "This state has not yet been assigned to a volunteer for development work, or work has not begun."
+    #-
+    #    class: "partial"
+    #    title: "In progress"
+    #    description: "A volunteer developer is in the process of customizing a scraper to acquire and standardize results data from this state. (I know this oversimplifies, but we should find language that is also clear to non-devs)"
     -
         class: "raw"
         title: "Raw"
-        description: ""
+        description: "Data has been acquired from this state in its basic state, some common standard fields have been identified, and data for common results reporting levels are available."
     -
         class: "clean"
         title: "Clean"
-        description: ""
+        description: "Data has been fully processed to conform to OpenElection's results spec and is present at all available reporting levels."
 ---
 <h2>Status of data collection</h2>
 
