Add "in progress" status for results
Make in progress blue, raw green and clean pink.

Also clean up SASS file by removing trailing whitespace from lines
and converting comment syntax so comments won't show up in output.

Addresses https://github.com/openelections/openelections.github.io/issues/19

--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@ results_statuses:
         class: "not-started"
         title: "Not started"
         description: "This state has not yet been assigned to a volunteer for development work, or work has not begun."
-    #-
-    #    class: "partial"
-    #    title: "In progress"
-    #    description: "A volunteer developer is in the process of customizing a scraper to acquire and standardize results data from this state. (I know this oversimplifies, but we should find language that is also clear to non-devs)"
+    -
+        class: "partial"
+        title: "In progress"
+        description: "A volunteer developer is in the process of customizing a scraper to acquire and standardize results data from this state."
     -
         class: "raw"
         title: "Raw"
