--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 ---
 title: Home
-layout: sidebar 
+layout: sidebar
 footer_scripts:
     - //d3js.org/d3.v3.min.js
     - //cdnjs.cloudflare.com/ajax/libs/lodash.js/2.4.1/lodash.min.js
     - //cdnjs.cloudflare.com/ajax/libs/backbone.js/1.1.2/backbone-min.js
 footer_script_include: index_footer_scripts.html
-sidebar_include: index_sidebar.html 
+sidebar_include: index_sidebar.html
 body_class: map
 hide_default_heading: true
 metadata_statuses:
@@ -40,7 +40,7 @@ results_statuses:
         title: "Clean"
         description: "Data has been fully processed to conform to OpenElection's results spec and is present at all available reporting levels."
 ---
-<h2>Status of data collection</h2>
+<h2>OpenElections State Progress Tracker</h2>
 
 {% include legend.html legend_id="legend-metadata" statuses=page.metadata_statuses %}
 
