--- a/results.html
+++ b/results.html
@@ -12,3 +12,9 @@ hide_default_heading: true
 <h2>Download Detailed Data</h2>
 
 <div id="results-container"></div>
+
+<section id="github-repositories" class="mt-4">
+  <div id="github-repos">
+    <!-- GitHub repository information will be loaded here dynamically -->
+  </div>
+</section>
